--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.27.0",
+    "framer-motion": "^5.4.5",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
