--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-courses",
   "private": true,
   "scripts": {
+	"prepare": "husky install",
     "dev": "next dev",
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
@@ -18,7 +19,8 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.21.0"
+    "react-hook-form": "^7.21.0",
+    "react-yandex-metrika": "^2.6.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
@@ -29,6 +31,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.4",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
