--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "react-courses",
   "private": true,
   "scripts": {
-	"prepare": "husky install",
+    "prepare": "husky install",
     "dev": "next dev",
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "stylelint": "stylelint \"**/*.css\" --fix",
-	"export": "next export"
+    "export": "next export"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -20,8 +20,7 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.21.0",
-    "react-yandex-metrika": "^2.6.0"
+    "react-hook-form": "^7.21.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
