--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: react-courses
+    image: docker.pkg.github.com/testdevelopeer/react-courses/react-courses:develop
     container_name: react-courses
     restart: always
     ports:
