--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-courses",
-  "type": "module",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "prepare": "husky install",
