--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^2.27.0",
     "framer-motion": "^5.4.5",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.21.0"
